# anger_tools

./: .gitignore  Makefile.am  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  init.sh  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/al_c_impl/array/: circle_array.c
src/al_c_impl/list/: Makefile.am  ins_sort_list  ins_sort_list.c  jose_ring  jose_ring.c  jose_ring_ary  jose_ring_ary.c  jose_ring_list  jose_ring_list.c  list.h  reverse_list  reverse_list.c
src/al_c_impl/skills/: Makefile.am  roundup_pow_of_two  roundup_pow_of_two.c
src/al_c_impl/string/: find_sub_str.c
src/al_c_impl/tree/: bintree.c
src/algorithms/lists/: frames.c
src/algorithms/lists/slist/: Makefile.am  slist.c  slist.h
src/algorithms/sorts/: Makefile.am  quick_sort  quick_sort.c
src/algorithms/sorts/.deps/: quick_sort.Po
src/examples/: Makefile.am  coins  coins.c  lg  lg.c  num.h  point.h  point_distance.c  prime  prime.c
src/include/: anger_dlist_out.h  anger_list_in.h  anger_list_out.h  list.h  stack.h  unp.h
src/include/linux/: kfifo.h  typecheck.h
src/letmecode/: Makefile.am  a.out  add_two_list_array.c  longest_substr_norepeated  longest_substr_norepeated.c  palindrome_number  palindrome_number.c
src/lib/: Makefile.am  anger_dlist_out.c  anger_list_out.c  wrap.c
src/lib/.libs/: libwrap.lai  libwrap.so.0  libwrap.so.0.0.0
src/lib/cpp/no_mutex/: list.c  spin_lock.c
src/test/: Makefile.am  test2array  test_2array.c
src/test/gnu_test/: Makefile.am  gnu_0_array.c  gnu_typeof.c  gnu_typeof_test
